adding bottom navigation bar

--- a/LaundryApps/LaundryApps.csproj
+++ b/LaundryApps/LaundryApps.csproj
@@ -59,6 +59,8 @@
 	  <None Remove="Resources\Fonts\AvenirBlack.otf" />
 	  <None Remove="Resources\Fonts\AvenirBook.otf" />
 	  <None Remove="Resources\Fonts\AvenirRoman.otf" />
+	  <None Remove="Resources\Images\history.svg" />
+	  <None Remove="Resources\Images\home.svg" />
 	  <None Remove="Resources\Images\Karpet.svg" />
 	  <None Remove="Resources\Images\kasur.svg" />
 	  <None Remove="Resources\Images\mesincuci.svg" />
@@ -67,6 +69,7 @@
 	  <None Remove="Resources\Images\promo2.png" />
 	  <None Remove="Resources\Images\sepatu.svg" />
 	  <None Remove="Resources\Images\setrika.svg" />
+	  <None Remove="Resources\Images\ticket.svg" />
 	  <None Remove="Resources\Splash\logo.png" />
 	</ItemGroup>
 
