adding logic navigation to ticket page

--- a/LaundryApps/LaundryApps.csproj
+++ b/LaundryApps/LaundryApps.csproj
@@ -90,6 +90,9 @@
 	  <MauiXaml Update="Views\Register.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Ticket.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
