adding order view

--- a/LaundryApps/LaundryApps.csproj
+++ b/LaundryApps/LaundryApps.csproj
@@ -92,6 +92,9 @@
 	  <MauiXaml Update="Views\Order.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\OrderConfirmed.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Register.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
