--- a/LaundryApps/LaundryApps.csproj
+++ b/LaundryApps/LaundryApps.csproj
@@ -61,6 +61,7 @@
 	  <None Remove="Resources\Fonts\AvenirRoman.otf" />
 	  <None Remove="Resources\Images\back.svg" />
 	  <None Remove="Resources\Images\backicon.svg" />
+	  <None Remove="Resources\Images\Delivery.svg" />
 	  <None Remove="Resources\Images\history.svg" />
 	  <None Remove="Resources\Images\home.svg" />
 	  <None Remove="Resources\Images\Karpet.svg" />
